<?xml version="1.0" encoding="utf-8"?>
<!-- 		Copyright (C) 2009-2011 Felix Bechstein -->
<!--
		This file is part of WebSMS. This program is free software; you can
		redistribute it and/or modify it under the terms of the GNU General
		Public License as published by the Free Software Foundation; either
		version 3 of the License, or (at your option) any later version.
-->
<!--
		This program is distributed in the hope that it will be useful, but
		WITHOUT ANY WARRANTY; without even the implied warranty of
		MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
		General Public License for more details. You should have received a
		copy of the GNU General Public License along with this program; If
		not, see <http://www.gnu.org/licenses/>.
-->
<menu
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/item_send"
            android:title="@string/send_"
            android:icon="@drawable/ic_menu_send"
            app:showAsAction="always"/>
    <item
            android:id="@+id/item_connector"
            android:title="@string/change_connector_"
            android:icon="@android:drawable/ic_menu_share"
            app:showAsAction="ifRoom"/>
    <item
            android:id="@+id/item_update"
            android:title="@string/update_"
            android:icon="@drawable/ic_menu_refresh"
            app:showAsAction="always"/>
    <item
            android:id="@+id/item_draft"
            android:title="@string/save_draft_"
            android:icon="@android:drawable/ic_menu_save"
            app:showAsAction="never"/>
    <item
            android:id="@+id/item_savechars"
            android:title="@string/save_chars_"
            android:icon="@android:drawable/ic_menu_sort_alphabetically"
            app:showAsAction="never"/>
    <item
            android:id="@+id/item_settings"
            android:title="@string/settings"
            android:icon="@android:drawable/ic_menu_preferences"
            app:showAsAction="never"/>
    <item
            android:id="@+id/item_donate"
            android:title="@string/donate_remove_ads_"
            android:icon="@drawable/ic_menu_star"
            app:showAsAction="never"/>

</menu>